<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg">

        <TextView
            android:id="@+id/txterorr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"
            android:text="@string/error"
            android:textColor="@color/color_add_btn"
            android:textSize="20sp"
            android:typeface="serif" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/kk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/template_error"
            android:textColor="@color/color_text_onseek"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kk"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_ok_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_bar"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_conti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_add_btn"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/txt_conti"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:typeface="serif" />
    </LinearLayout>
</RelativeLayout>
