<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.Poster_SubscriptionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/poster_bg_toolbar"
                android:padding="@dimen/_8sdp">
<!--
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#189EFD"
                android:padding="@dimen/_8sdp">
-->

                <ImageButton
                    android:id="@+id/actionCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/poster_ic_cancel"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/heading"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="Unlock all features"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sub_heading"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:text="Templates, Graphics &amp; Tools"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:text="What's included"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="DisableBaselineAlignment">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_premium_templates"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sub_image_height"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_remove_ads"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sub_image_height"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_remove_watermark"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="DisableBaselineAlignment">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sub_image_height"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_shape_crop"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sub_image_height"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_unlimited_fonts"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sub_image_height"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/sub_image_padding"
                        android:src="@drawable/poster_img_unlimited_graphics"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|top"
                        android:src="@drawable/poster_ic_circle_check"
                        tools:ignore="ContentDescription" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/update_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/string_massive_update"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
              />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"
                tools:text="@string/error_no_skus" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_auto_start="true"
                app:shimmer_base_alpha="1"
                app:shimmer_direction="left_to_right"
                app:shimmer_duration="1000"
                app:shimmer_highlight_alpha="0.5"
                app:shimmer_highlight_color="@color/white"
                app:shimmer_intensity="0"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="linear">

                <Button
                    android:id="@+id/actionContinue"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_18sdp"
                    android:layout_gravity="center"
                    android:foreground="@drawable/ad_card_ripple"
                    android:background="@drawable/poster_button_continue"
                    android:text="@string/button_continue"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="gone" />

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/terms_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Poster Maker Pro \n\n
This app offers below auto-renewing subscription options: \n\n
1. Monthly subscription\n
2. Six months subscription\n
3. Yearly subscription \n\n
Payment for Poster Maker PRO will be charged to your Google Play Account at confirmation of purchase. Your Poster Maker PRO subscription will automatically renew unless auto-renew is turned off within your Google Play Account at least 24-hours before the end of the current subscription billing period. \n\n
You can manage your subscription or tum off auto-renew in your Google Play Account settings after purchase. If you turn off auto-renew in the middle of a subscription period, you will still have access to all premium features until the end of the period. No partial refunds will be given for turning off auto-renew in the middle of a subscription period."
                android:padding="@dimen/_3sdp"
                android:textSize="8sp"
                android:textStyle="normal"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</ScrollView>